// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component - layout should render 1`] = `
<main
  className="jsx-2152329932 sans-serif "
>
  <footer
    className="jsx-2152329932 lh-copy f6 fw4 gray mh3"
  >
    <p
      className="jsx-2152329932 ma0 pa0"
    >
      affliate links benefit 
      <a
        className="jsx-2152329932"
        href="https://melaniekat.com"
        rel="me"
      >
        melkat
      </a>
    </p>
    <p
      className="jsx-2152329932 ma0 pa0"
    >
      melkat.deals does not track you
    </p>
  </footer>
</main>
`;

exports[`component - layout should render with props 1`] = `
<main
  className="jsx-2152329932 sans-serif "
>
  <b>
    #content
  </b>
  <footer
    className="jsx-2152329932 lh-copy f6 fw4 gray mh3"
  >
    <p
      className="jsx-2152329932 ma0 pa0"
    >
      affliate links benefit 
      <a
        className="jsx-2152329932"
        href="https://melaniekat.com"
        rel="me"
      >
        melkat
      </a>
    </p>
    <p
      className="jsx-2152329932 ma0 pa0"
    >
      melkat.deals does not track you
    </p>
  </footer>
</main>
`;
